--- a/conplake/pom.xml
+++ b/conplake/pom.xml
@@ -106,6 +106,10 @@
 			<artifactId>aspectjrt</artifactId>
 			<version>1.8.6</version>
 		</dependency>
-		
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4.7</version>
+		</dependency>
   </dependencies>
 </project>
